--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "eventsource-parser": "^1.0.0",
     "lru-cache": "^8.0.4",
     "next": "13.2.4",
     "openai": "^3.2.1",
