--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "eventsource-parser": "^1.0.0",
     "lru-cache": "^8.0.4",
     "next": "13.2.4",
-    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.43.7"
   },
   "devDependencies": {
